# stm32f411-toolchain

./: CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
.github/workflows/: ci.yaml
cmake/: arm-none-eabi-gcc.cmake
dev/: README.md
dev/vscode/: c_cpp_properties.json  launch.json
src/: main.c
